# BackgroundThread

./: .gitignore  CMakeLists.txt  README.md
BackgroundThread/: BackgroundTask.cpp  BackgroundThread.cpp  CMakeLists.txt  Task.cpp  Task.hpp  Thread.cpp  ThreadPool.cpp  ThreadPool.hpp  Token.hpp  Types.hpp  UiWork.hpp  UiWorker.cpp  UiWorker.hpp
BackgroundThread/include/BackgroundThread/: BackgroundTask.hpp  BackgroundThread.hpp  BaseTask.hpp  Task.hpp  TaskBase.hpp  Thread.hpp  Token.hpp  types.hpp
FutureTest/: CMakeLists.txt  main.cpp
TestConsole/: CMakeLists.txt  console_main.cpp
TestGtk/: CMakeLists.txt  gtk_main.cpp
TestGtk/ViewModels/: MainViewModel.cpp  MainViewModel.hpp  WorkViewModel.cpp  WorkViewModel.hpp
TestGtk/Views/: MainWindow.hpp  Progress.hpp  Thumb.hpp
TestGtk/include/: MainWindow.hpp  Progress.hpp  Thumb.hpp  Worker.hpp
